[package]
name = "pseudo3d"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
glow = "0.16"
glam = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
thiserror = "2"
toml = "0.8"
kira = { version = "0.12", features = ["cpal"] }
rand = "0.10.1"
mint = "0.5.9"

[build-dependencies]
toml = "0.8"
